IntersectionObserver constructor: fail on invalid rootMargin syntax.

BUG=618976
R=ojan@chromium.org,eae@chromium.org

Review-Url: https://codereview.chromium.org/2088963002
Cr-Commit-Position: refs/heads/master@{#401562}

Former-commit-id: 1f7fb6ab2ddb97b65193d9a12008124096d85c6b